examples/bad/runtime_error_index_out_of_bounds.ps
[string] arr = ["Hello", "there", "!"];
int i = 0;
while i < 13 {
    println(arr[i]);
    i = i + 1;
}